# flota

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/api/: mod.rs
src/distro/: mod.rs
src/distro/centos/: mod.rs
src/distro/centos/release_6/: mod.rs
src/distro/centos/release_6/x86_64/: mod.rs
src/distro/opensuse/: mod.rs
src/distro/opensuse/release_13/: mod.rs
src/distro/opensuse/release_13/x86_64/: mod.rs
src/exec/: mod.rs
src/exec/session/: console.rs  local.rs  mod.rs  ssh.rs
src/flota/: config.rs  mod.rs  template.rs
src/flota/cluster/: host.rs  mod.rs
src/flota/config/: cluster.rs  mod.rs  setting.rs  template.rs
src/flota/config/cluster/: host.rs  mod.rs  watchpoint.rs
src/flota/config/store/: mod.rs  unqlite_backed.rs
src/flota/entity/: cluster.rs  host.rs  mod.rs  template.rs
src/flota/manager/: mod.rs  watch.rs
src/flota/test/: mod.rs
src/store/: mod.rs  unqlite_backed.rs
src/util/: errors.rs  ipv4.rs  md5sum.rs  mod.rs  notify.rs  url.rs
src/virt/: conn.rs  mod.rs  network.rs
src/virt/domain/: mod.rs  snapshot.rs
src/virt/storage/: mod.rs  pool.rs  volume.rs
