[package]
name = "flota"
version = "0.1.0"
authors = ["lkpdn <den.not.denmark@gmail.com>"]
readme = "README.md"
license = "MIT"
build = "build.rs"

[build-dependencies]
bindgen = "0.19.0"

#[profile.release]
#opt-level = 3
#debug = false
#rpath = false
#lto = false
#debug-assertions = false
#codegen-units = 1
#panic = 'unwind'

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[dependencies]
ansi_term = "0.9"
bit-vec = "0.4"
difference = "0.4"
env_logger = "0.3"
error-chain = "0.5"
getopts = "0.2"
git2 = "0.5"
hyper = "*"
lazy_static = "0.1"
libc = "*"
log = "0.3"
nickel = "*"
nix = "0.6"
notify = "2.6"
quick-error = "1.1"
rust-crypto = "^0.2"
rusted_cypher = "*"
RustyXML = "*"
serde = "0.8"
serde_macros = "0.8"
serde_derive = "0.8"
serde_json = "*"
ssh2 = "0.2"
syntex = "0.44"
term = "0.4.4"
time = "0.1"
toml = "0.2"
url = { git = "https://github.com/servo/rust-url" }
